# hfsa-analysis

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
datakit/: __init__.py  config.py  dataset.py  event-detect-algo.py  features.py  load.py  plots.py  proc.py  sandbox.py
datakit/modeling/: predict.py  train.py
datakit/utils/: utils.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: exploration.ipynb
reports/figures/plot.png/: STREHAB02_report.html  STREHAB03_report.html  STREHAB05_report.html
reports/templates/: report_template.html
