[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "datakit"
version = "0.1.0"
description = "Load data from my HFSA neurobehavioral study from BIDS file directory structure into a MultiIndexed Pandas dataframe for further processing, analysis, and modeling while preserving data provinence with a DataLoader class for future reproducibility. "
authors = [
  { name = "Jacob Gronemeyer" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["datakit"]
force_sort_within_sections = true


